--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "discord.js": "^13.8.1",
     "dotenv": "^16.0.1",
     "events": "^3.3.0",
+    "json": "^11.0.0",
     "leo-profanity": "^1.5.1",
+    "ocr-space-api-alt2": "^2.0.1",
+    "ocr-space-api-wrapper": "^2.1.1",
     "tesseract.js": "^2.1.5"
   },
   "description": ""
