--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "bot.js",
   "scripts": {
-    "start": "npm bot.js"
+    "start": "node bot.js"
   },
   "keywords": [],
   "author": "",
